<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_slam_sim</name>
  <version>0.0.0</version>
  <description>ROS package with launch files and code to demonstrate landmark-based EKF SLAM on a simulated Turtlebot 4 in Gazebo.</description>
  <maintainer email="waitingfortheelectrician@gmail.com">Rick Armstrong</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>apriltag_ros_interfaces</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
